fix: 🐛 z-index issue in video player

--- a/src/components/video-player/video-player.module.scss
+++ b/src/components/video-player/video-player.module.scss
@@ -3,7 +3,7 @@
     .controls {
         position: absolute;
         inset: 0;
-        z-index: 100;
+        z-index: 5;
 
         .play-btn {
             position: absolute;
